# LazyGE

./: Cargo.toml
src/: main.rs
src/lib/: driver.rs  helper.rs  scraper.rs
