[package]
name = "lazy_ge"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.31.0"
colored = { git = "https://github.com/mackwic/colored" }
nonblock = "0.2.0"
sysinfo = "0.28.1"
tokio = { version = "1.26.0", features = ["process"] }
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4.23"
catppuccin = "1.2.1"
